--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,11 @@
           android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="19"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
@@ -15,6 +20,11 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name="net.conor.android.cbeeber.activity.CoreActivity"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait" >
         </activity>
     </application>
 </manifest>
