location awareness and better splash screen

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,12 +9,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
         <activity
-            android:name="net.conor.android.cbeeber.activity.MyActivity"
+            android:name=".activity.WelcomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
