--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="net.conor.android.cbeeber.activity.CoreActivity"
+                android:name=".activity.ScheduleListActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait" >
         </activity>
