--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity
                 android:name=".activity.ScheduleListActivity"
-                android:label="@string/app_name"
+                android:label="@string/app_description"
                 android:screenOrientation="portrait" >
         </activity>
     </application>
