programme page, iplayer links, favourites adding to database

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,5 +28,10 @@
                 android:label="@string/app_description"
                 android:screenOrientation="portrait">
         </activity>
+        <activity
+                android:name=".activity.ProgrammeActivity"
+                android:label="@string/programme_detail"
+                android:screenOrientation="portrait" >
+        </activity>
     </application>
 </manifest>
