added a fragment and help activity with back buttons, updated help in menus

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,5 +33,6 @@
                 android:screenOrientation="portrait" >
 
         </activity>
+        <activity android:name=".activity.HelpActivity"/>
     </application>
 </manifest>
