--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,12 +25,10 @@
         </activity>
         <activity
                 android:name=".activity.ScheduleListActivity"
-                android:label="@string/app_description"
-                android:screenOrientation="portrait">
+                android:label="@string/app_description">
         </activity>
         <activity
-                android:name=".activity.ProgrammeActivity"
-                android:screenOrientation="portrait" >
+                android:name=".activity.ProgrammeActivity">
 
         </activity>
         <activity android:name=".activity.HelpActivity"
